--- a/factures/facture.css
+++ b/factures/facture.css
@@ -2,7 +2,7 @@ body {font-size:100%;background:#fff;}
 div.facture {width:600px;border:1px solid #999;background:#fff;margin:0 auto;padding:20px;}
 h1 {text-align:right;}
 p.date {text-align:right;}
-p.client {margin-left:300px;border-top:1px solid #999;border-bottom:1px solid #999;}
+p.client {margin-left:300px;border-top:1px solid #999;border-bottom:1px solid #999;margin-bottom: 5em;}
 table {margin:20px auto;border:1px solid #eee;border-collapse:collapse;width:90%;}
 table td,
 table th
@@ -11,3 +11,12 @@ table th {background:#eee;}
 table tr.total td {background:#eee;}
 .header {margin-bottom: 4em;}
 .footer {font-size: 0.9em;text-align: center;margin-top: 4em;}
+
+@media (max-width: 650px){
+    div.facture {width: auto;border: 0;}
+    p.client {margin-left: 50%}
+}
+@media print {
+    div.facture {width: auto;border: 0;}
+    p.client {margin-left: 50%}
+}
